# stellar-math

./: .blas.rs  .gitignore  .ignore  .rust-analyzer.toml  Cargo.toml  PLAN  PLAN.md  README.md  config.toml  dev.rs  francis-qr.rs  local.md  main.bu  notes.md  proto.bu  rustfmt.toml  temp.txt  validation.txt
.cargo/: config.toml
benches/: kernel.rs  lib.rs  lq.rs  lq_bench.rs  matrix.rs  matrix_benchmark.rs  matrix_flame.rs  mod.rs  sharedvars.rs  sizes.rs
benches/b_kernel/: all_kernels.rs  full_block.rs  mod.rs
benches/b_lq/: decomposition.rs  left_apply.rs  left_apply_q.rs  left_apply_t.rs  mod.rs  right_apply_q.rs  right_apply_t.rs
benches/b_matrix/: cache_methods.rs  matmul.rs  matmul_flame.rs  mod.rs
examples/: gmm.rs  trees.rs
scripts/: flame_matrix_benchmark.sh  kernel_benchmark.sh  matrix_benchmark.sh
src/: arch.rs  lib.rs  lu_choleksy.rs  main.rs  solve_system.rs
src/algebra/: bmethods.rs  bmethods_tri.rs  fourier.rs  math.rs  mmethods.rs  mod.rs  mxmethods.rs  ndmethods.rs  ndsmethods.rs  signal.rs  simd.rs  vector.rs
src/algebra/bmethods/: blocks.rs  contractions.rs  diagonals.rs  interface.rs  mod.rs  obsolesced_square.rs  primitives.rs  tests.rs
src/algebra/bmethods/tests/: dense.rs  fma.rs  helpers.rs  mod.rs  stride.rs  trapezoid.rs
src/control/: ekf_signal.rs  mod.rs
src/decomposition/: bidiagonal.rs  cholesky.rs  givens.rs  householder.rs  jacobi.rs  lower_upper.rs  lq.rs  lu.rs  mod.rs  qr.rs  qr_matrix.rs  schur.rs  sgivens.rs  svd.rs  wy.rs
src/decomposition/francis/: complex.rs  constants.rs  interface.rs  mod.rs  primitives.rs  symmetric.rs  verify.rs
src/equality/: approximate.rs
src/generation/: random.rs
src/kernel/: avx2.rs  avx2safe.rs  avx512.rs  default.rs  matkerns.rs  mod.rs  neon.rs
src/kernel/avx2/: alligned.rs  constants.rs  interface.rs  ltrapezoid.rs  ltriangle.rs  mod.rs  rtrapezoid.rs  rtriangle.rs  triangle.rs  unalligned.rs
src/learning/: decision_tree.rs  expectation_maximization.rs  gaussian_mixture.rs  gradient_boost.rs  kmeans.rs  knn.rs  mod.rs  random_forest.rs
src/random/: generation.rs  mod.rs  rayleigh_eigen_vector.rs  rayleigh_eigenvector.rs
src/solver/: eigenvector.rs  ekf_filter.rs  linear.rs  mod.rs  multi_armed_bandit.rs  randomized_svd.rs
src/structure/: matrix.rs  mod.rs  ndarray.rs  ndsignal.rs  structure.rs
tests/: decision_tree.rs  decomposition.rs  lower_upper.rs  lu_decomposition.rs  qr_decomp.rs  qr_decomposition.rs  schur_decomposition.rs  svd_golub_kahan.rs
