[build]
rustflags = ["-C", "target-cpu=native"]


[package]
name = "stellar"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
itertools = "0.14.0"
rand = "0.10.0"
rand_distr = "0.6.0"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5"
ndarray = "0.17.2"
plotters = {version= "0.3", features = ["full_palette"] }
faer = { version = "0.24.0", features = ["std"] }
faer-ext = { version = "0.7.1", features = ["ndarray"] }

[[bench]]
name = "lq"
sample_size = 4
harness = false

[[bench]]
name = "matrix"
sample_size = 4
harness = false

[profile.release]
strip = true
codegen-units = 1
lto = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
